# mazinator

./: .travis.yml  Cargo.toml  README.md  deploy.sh
src/: lib.rs  main.rs
src/algo/: bfs.rs  dfs.rs  mod.rs
src/display/: mod.rs
src/structure/: matrix.rs  mod.rs  wall.rs
src/utils/: mod.rs
tests/: visit_test.rs
